--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,9 +1,9 @@
 use_frameworks!
 
-platform :ios, '10.0'
+platform :ios, '13.0'
 
 target 'QRCodeSwiftScanner_Example' do
-  pod 'QRCodeSwiftScanner', :path => '../'
+  pod 'QRCodeSwiftScanner', :path => '../../QRCodeSwiftScanner'
 
   target 'QRCodeSwiftScanner_Tests' do
     inherit! :search_paths
