--- a/Example/QRCodeSwiftScanner/Info.plist
+++ b/Example/QRCodeSwiftScanner/Info.plist
@@ -20,8 +20,10 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
-    <key>NSPhotoLibraryUsageDescription</key>
-    <string>This app needs access to your photo library to allow you to upload scan QRCode.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>This app needs access to your photo library to allow you to upload scan QRCode.</string>
+	<key>NSCameraUsageDescription</key>
+	<string>This app needs access to your camera library to allow you to upload scan QRCode.</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
